conj.output
Terminals unused in grammar

    '('


State 36 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 73 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce


Grammar

    0 $accept: library END

    1 library: functions

    2 functions: functions IDENTIFIER paramdecls ':' stmt
    3          | ε

    4 paramdecls: paramdecl
    5           | ε

    6 paramdecl: paramdecl ',' IDENTIFIER
    7          | IDENTIFIER

    8 stmt: com_stmt '}'
    9     | "if" '{' expr '}' stmt
   10     | "while" '{' expr '}' stmt
   11     | "return" expr ';'
   12     | var_defs ';'
   13     | expr ';'
   14     | ';'

   15 com_stmt: '{'
   16         | com_stmt stmt

   17 var_defs: "var" var_def1
   18         | var_defs ',' var_def1

   19 var_def1: IDENTIFIER '=' expr
   20         | IDENTIFIER

   21 expr: NUMCONST
   22     | STRINGCONST
   23     | IDENTIFIER
   24     | '<' expr '>'
   25     | expr '[' expr ']'
   26     | expr '<' '>'
   27     | expr '<' expr '>'
   28     | expr '=' expr
   29     | expr '+' expr
   30     | expr '-' expr
   31     | expr "+=" expr
   32     | expr "-=" expr
   33     | expr "||" expr
   34     | expr "&&" expr
   35     | expr "==" expr
   36     | expr "!=" expr
   37     | expr ',' expr
   38     | '&' expr
   39     | '*' expr
   40     | '-' expr
   41     | '!' expr
   42     | "++" expr
   43     | "--" expr
   44     | expr "++"
   45     | expr "--"
   46     | expr '?' expr ':' expr


Terminals, with rules where they appear

    END (0) 0
    '!' (33) 41
    '&' (38) 38
    '(' (40)
    '*' (42) 39
    '+' (43) 29
    ',' (44) 6 18 37
    '-' (45) 30 40
    ':' (58) 2 46
    ';' (59) 11 12 13 14
    '<' (60) 24 26 27
    '=' (61) 19 28
    '>' (62) 24 26 27
    '?' (63) 46
    '[' (91) 25
    ']' (93) 25
    '{' (123) 9 10 15
    '}' (125) 8 9 10
    error (256)
    "return" (258) 11
    "while" (259) 10
    "if" (260) 9
    "var" (261) 17
    IDENTIFIER (262) 2 6 7 19 20 23
    NUMCONST (263) 21
    STRINGCONST (264) 22
    "||" (265) 33
    "&&" (266) 34
    "==" (267) 35
    "!=" (268) 36
    "++" (269) 42 44
    "--" (270) 43 45
    "+=" (271) 31
    "-=" (272) 32


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    library (36)
        on left: 1
        on right: 0
    functions (37)
        on left: 2 3
        on right: 1 2
    paramdecls (38)
        on left: 4 5
        on right: 2
    paramdecl (39)
        on left: 6 7
        on right: 4 6
    stmt (40)
        on left: 8 9 10 11 12 13 14
        on right: 2 9 10 16
    com_stmt (41)
        on left: 15 16
        on right: 8 16
    var_defs (42)
        on left: 17 18
        on right: 12 18
    var_def1 (43)
        on left: 19 20
        on right: 17 18
    expr (44)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 9 10 11 13 19 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46


State 0

    0 $accept: • library END
    1 library: • functions
    2 functions: • functions IDENTIFIER paramdecls ':' stmt
    3          | ε •

    $default  reduce using rule 3 (functions)

    library    go to state 1
    functions  go to state 2


State 1

    0 $accept: library • END

    END  shift, and go to state 3


State 2

    1 library: functions •  [END]
    2 functions: functions • IDENTIFIER paramdecls ':' stmt

    IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 1 (library)


State 3

    0 $accept: library END •

    $default  accept


State 4

    2 functions: functions IDENTIFIER • paramdecls ':' stmt
    4 paramdecls: • paramdecl
    5           | ε •  [':']
    6 paramdecl: • paramdecl ',' IDENTIFIER
    7          | • IDENTIFIER

    IDENTIFIER  shift, and go to state 5

    $default  reduce using rule 5 (paramdecls)

    paramdecls  go to state 6
    paramdecl   go to state 7


State 5

    7 paramdecl: IDENTIFIER •

    $default  reduce using rule 7 (paramdecl)


State 6

    2 functions: functions IDENTIFIER paramdecls • ':' stmt

    ':'  shift, and go to state 8


State 7

    4 paramdecls: paramdecl •  [':']
    6 paramdecl: paramdecl • ',' IDENTIFIER

    ','  shift, and go to state 9

    $default  reduce using rule 4 (paramdecls)


State 8

    2 functions: functions IDENTIFIER paramdecls ':' • stmt
    8 stmt: • com_stmt '}'
    9     | • "if" '{' expr '}' stmt
   10     | • "while" '{' expr '}' stmt
   11     | • "return" expr ';'
   12     | • var_defs ';'
   13     | • expr ';'
   14     | • ';'
   15 com_stmt: • '{'
   16         | • com_stmt stmt
   17 var_defs: • "var" var_def1
   18         | • var_defs ',' var_def1
   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    "return"     shift, and go to state 10
    "while"      shift, and go to state 11
    "if"         shift, and go to state 12
    "var"        shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '{'          shift, and go to state 22
    ';'          shift, and go to state 23
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    stmt      go to state 26
    com_stmt  go to state 27
    var_defs  go to state 28
    expr      go to state 29


State 9

    6 paramdecl: paramdecl ',' • IDENTIFIER

    IDENTIFIER  shift, and go to state 30


State 10

   11 stmt: "return" • expr ';'
   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 31


State 11

   10 stmt: "while" • '{' expr '}' stmt

    '{'  shift, and go to state 32


State 12

    9 stmt: "if" • '{' expr '}' stmt

    '{'  shift, and go to state 33


State 13

   17 var_defs: "var" • var_def1
   19 var_def1: • IDENTIFIER '=' expr
   20         | • IDENTIFIER

    IDENTIFIER  shift, and go to state 34

    var_def1  go to state 35


State 14

   23 expr: IDENTIFIER •

    $default  reduce using rule 23 (expr)


State 15

   21 expr: NUMCONST •

    $default  reduce using rule 21 (expr)


State 16

   22 expr: STRINGCONST •

    $default  reduce using rule 22 (expr)


State 17

   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   42     | "++" • expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 36


State 18

   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   43     | "--" • expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 37


State 19

   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   40     | '-' • expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 38


State 20

   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   39     | '*' • expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 39


State 21

   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   38     | '&' • expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 40


State 22

   15 com_stmt: '{' •

    $default  reduce using rule 15 (com_stmt)


State 23

   14 stmt: ';' •

    $default  reduce using rule 14 (stmt)


State 24

   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   24     | '<' • expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 41


State 25

   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   41     | '!' • expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 42


State 26

    2 functions: functions IDENTIFIER paramdecls ':' stmt •

    $default  reduce using rule 2 (functions)


State 27

    8 stmt: • com_stmt '}'
    8     | com_stmt • '}'
    9     | • "if" '{' expr '}' stmt
   10     | • "while" '{' expr '}' stmt
   11     | • "return" expr ';'
   12     | • var_defs ';'
   13     | • expr ';'
   14     | • ';'
   15 com_stmt: • '{'
   16         | • com_stmt stmt
   16         | com_stmt • stmt
   17 var_defs: • "var" var_def1
   18         | • var_defs ',' var_def1
   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    "return"     shift, and go to state 10
    "while"      shift, and go to state 11
    "if"         shift, and go to state 12
    "var"        shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '}'          shift, and go to state 43
    '{'          shift, and go to state 22
    ';'          shift, and go to state 23
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    stmt      go to state 44
    com_stmt  go to state 27
    var_defs  go to state 28
    expr      go to state 29


State 28

   12 stmt: var_defs • ';'
   18 var_defs: var_defs • ',' var_def1

    ','  shift, and go to state 45
    ';'  shift, and go to state 46


State 29

   13 stmt: expr • ';'
   25 expr: expr • '[' expr ']'
   26     | expr • '<' '>'
   27     | expr • '<' expr '>'
   28     | expr • '=' expr
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • "+=" expr
   32     | expr • "-=" expr
   33     | expr • "||" expr
   34     | expr • "&&" expr
   35     | expr • "==" expr
   36     | expr • "!=" expr
   37     | expr • ',' expr
   44     | expr • "++"
   45     | expr • "--"
   46     | expr • '?' expr ':' expr

    "||"  shift, and go to state 47
    "&&"  shift, and go to state 48
    "=="  shift, and go to state 49
    "!="  shift, and go to state 50
    "++"  shift, and go to state 51
    "--"  shift, and go to state 52
    "+="  shift, and go to state 53
    "-="  shift, and go to state 54
    ','   shift, and go to state 55
    '?'   shift, and go to state 56
    '='   shift, and go to state 57
    '+'   shift, and go to state 58
    '-'   shift, and go to state 59
    '['   shift, and go to state 60
    ';'   shift, and go to state 61
    '<'   shift, and go to state 62


State 30

    6 paramdecl: paramdecl ',' IDENTIFIER •

    $default  reduce using rule 6 (paramdecl)


State 31

   11 stmt: "return" expr • ';'
   25 expr: expr • '[' expr ']'
   26     | expr • '<' '>'
   27     | expr • '<' expr '>'
   28     | expr • '=' expr
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • "+=" expr
   32     | expr • "-=" expr
   33     | expr • "||" expr
   34     | expr • "&&" expr
   35     | expr • "==" expr
   36     | expr • "!=" expr
   37     | expr • ',' expr
   44     | expr • "++"
   45     | expr • "--"
   46     | expr • '?' expr ':' expr

    "||"  shift, and go to state 47
    "&&"  shift, and go to state 48
    "=="  shift, and go to state 49
    "!="  shift, and go to state 50
    "++"  shift, and go to state 51
    "--"  shift, and go to state 52
    "+="  shift, and go to state 53
    "-="  shift, and go to state 54
    ','   shift, and go to state 55
    '?'   shift, and go to state 56
    '='   shift, and go to state 57
    '+'   shift, and go to state 58
    '-'   shift, and go to state 59
    '['   shift, and go to state 60
    ';'   shift, and go to state 63
    '<'   shift, and go to state 62


State 32

   10 stmt: "while" '{' • expr '}' stmt
   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 64


State 33

    9 stmt: "if" '{' • expr '}' stmt
   21 expr: • NUMCONST
   22     | • STRINGCONST
   23     | • IDENTIFIER
   24     | • '<' expr '>'
   25     | • expr '[' expr ']'
   26     | • expr '<' '>'
   27     | • expr '<' expr '>'
   28     | • expr '=' expr
   29     | • expr '+' expr
   30     | • expr '-' expr
   31     | • expr "+=" expr
   32     | • expr "-=" expr
   33     | • expr "||" expr
   34     | • expr "&&" expr
   35     | • expr "==" expr
   36     | • expr "!=" expr
   37     | • expr ',' expr
   38     | • '&' expr
   39     | • '*' expr
   40     | • '-' expr
   41     | • '!' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • expr "++"
   45     | • expr "--"
   46     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '<'          shift, and go to state 24
    '!'          shift, and go to state 25

    expr  go to state 65


State 34

   19 var_def1: IDENTIFIER • '=' expr
   20         | IDENTIFIER •  [',', ';']

    '='  shift, and go to state 66

    $default  reduce using rule 20 (var_def1)


State 35

   17 var_defs: "var" var_def1 •

    $default  reduce using rule 17 (var_defs)


State 36

   25 expr: expr • '[' expr ']'
   26     | expr • '<' '>'
   27     | expr • '<' expr '>'
   28     | expr • '=' expr
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • "+=" expr
   32     | expr • "-=" expr
   33     | expr • "||" expr
   34     | expr • "&&" expr
   35     | expr • "==" expr
   36     | expr • "!=" expr
   37     | expr • ',' expr
   42     | "++" expr •  ["||", "&&", "==", "!=", "+=", "-=", ',', '?', ':', '=', '+', '-', '}', ';', '<', '>', ']']
   44     | expr • "++"
   45     | expr • "--"
   46     | expr • '?' expr ':' expr

    "++"  shift, and go to state 51
    "--"  shift, and go to state 52
    '['   shift, and go to state 60
    '<'   shift, and go to state 62

    '<'       [reduce using rule 42 (expr)]
    $default  reduce using rule 42 (expr)

    Conflict between rule 42 and token "||" resolved as reduce ("||" < "++").
    Conflict between rule 42 and token "&&" resolved as reduce ("&&" < "++").
    Conflict between rule 42 and token "==" resolved as reduce ("==" < "++").
    Conflict between rule 42 and token "!=" resolved as reduce ("!=" < "++").
    Conflict between rule 42 and token "++" resolved as shift (%right "++").
    Conflict between rule 42 and token "--" resolved as shift (%right "--").
    Conflict between rule 42 and token "+=" resolved as reduce ("+=" < "++").
    Conflict between rule 42 and token "-=" resolved as reduce ("-=" < "++").
    Conflict between rule 42 and token ',' resolved as reduce (',' < "++").
    Conflict between rule 42 and token '?' resolved as reduce ('?' < "++").
    Conflict between rule 42 and token '=' resolved as reduce ('=' < "++").
    Conflict between rule 42 and token '+' resolved as reduce ('+' < "++").
    Conflict between rule 42 and token '-' resolved as reduce ('-' < "++").
    Conflict between rule 42 and token '[' resolved as shift ("++" < '[').

    shift/reduce conflict on token '<':
       42 expr: "++" expr •
       26 expr: expr • '<' '>'
      Example: "++" expr • '<' '>'
      Shift derivation
        expr
        ↳ 42: "++" expr
                   ↳ 26: expr • '<' '>'
      Reduce derivation
        expr
        ↳ 26: expr              '<' '>'
              ↳ 42: "++" expr •

    shift/reduce conflict on token '<':
       42 expr: "++" expr •
       27 expr: expr • '<' expr '>'
      Example: "++" expr • '<' expr '>'
      Shift derivation
        expr
        ↳ 42: "++" expr
                   ↳ 27: expr • '<' expr '>'
      Reduce derivation
        expr
        ↳ 27: expr              '<' expr '>'
              ↳ 42: "++" expr •



State 37

   25 expr: expr • '[' expr ']'
   26     | expr • '<' '>'
   27     | expr • '<' expr '>'
   28     | expr • '=' expr
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • "+=" expr
   32     | expr • "-=" expr
   33     | expr • "||" expr
   34     | expr • "&&" expr
   35     | expr • "==" expr
   36     | expr • "!=" expr
   37     | expr • ',' expr
   43     | "--" expr •  ["||", "&&", "==", "!=", "+=", "-=", ',', '?', ':', '=', '+', '-', '}', ';', '<', '>', ']']
   44     | expr • "++"
   45     | expr • "--"
   46     | expr • '?' expr ':' expr

    "++"  shift, and go to state 51
    "--"  shift, and go to state 52
    '['   shift, and go to state 60
    '<'   shift, and go to state 62

    '<'       [reduce using rule 43 (expr)]
    $default  reduce using rule 43 (expr)

    Conflict between rule 43 and token "||" resolved as reduce ("||" < "++").
    Conflict between rule 43 and token "&&" resolved as reduce ("&&" < "++").
    Conflict between rule 43 and token "==" resolved as reduce ("==" < "++").
    Conflict between rule 43 and token "!=" resolved as reduce ("!=" < "++").
    Conflict between rule 43 and token "++" resolved as shift (%right "++").
    Conflict between rule 43 and token "--" resolved as shift (%right "--").
    Conflict between rule 43 and token "+=" resolved as reduce ("+=" < "++").
    Conflict between rule 43 and token "-=" resolved as reduce ("-=" < "++").
    Conflict between rule 43 and token ',' resolved as reduce (',' < "++").
    Conflict between rule 43 and token '?' resolved as reduce ('?' < "++").
    Conflict between rule 43 and token '=' resolved as reduce ('=' < "++").
    Conflict between rule 43 and token '+' resolved as reduce ('+' < "++").
    Conflict between rule 43 and token '-' resolved as reduce ('-' < "++").
    Conflict between rule 43 and token '[' resolved as shift ("++" < '[').

    shift/reduce conflict on token '<':
       43 expr: "--" expr •
       26 expr: expr • '<' '>'
      Example: "--" expr • '<' '>'
      Shift derivation
        expr
        ↳ 43: "--" expr
                   ↳ 26: expr • '<' '>'
      Reduce derivation
        expr
        ↳ 26: expr              '<' '>'
              ↳ 43: "--" expr •

    shift/reduce conflict on token '<':
       43 expr: "--" expr •
       27 expr: expr • '<' expr '>'
      Example: "--" expr • '<' expr '>'
      Shift derivation
        expr
        ↳ 43: "--" expr
                   ↳ 27: expr • '<' expr '>'
      Reduce derivation
        expr
        ↳ 27: expr              '<' expr '>'
              ↳ 43: "--" expr •



State 38

   25 expr: expr • '[' expr ']'
   26     | expr • '<' '>'
   27     | expr • '<' expr '>'
   28     | expr • '=' expr
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • "+=" expr
   32     | expr • "-=" expr
   33     | expr • "||" expr
   34     | expr • "&&" expr
   35     | expr • "==" expr
   36     | expr • "!=" expr
   37     | expr • ',' expr
   40     | '-' expr •  ["||", "&&", "==", "!=", "+=", "-=", ',', '?', ':', '=', '+', '-', '}', ';', '<', '>', ']']
   44     | expr • "++"
   45     | expr • "--"
   46     | expr • '?' expr ':' expr

    "++"  shift, and go to state 51
    "--"  shift, and go to state 52
    '['   shift, and go to state 60
    '<'   shift, and go to state 62

    '<'       [reduce using rule 40 (expr)]
    $default  reduce using rule 40 (expr)
